backend/err.txt
K:\Open source\WalletWise\backend\controllers\transactionController.js:183
});
^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.11.1
